# rust-cookbook

./: Cargo.toml  README.md
algorithms/src/: main.rs
cli/: Cargo.toml
compression/: Cargo.toml
compression/src/: main.rs
concurrency/: Cargo.toml
concurrency/src/: main.rs
cryptography/: Cargo.toml
cryptography/src/: main.rs
data_structures/: Cargo.toml
data_structures/src/: main.rs
database/: Cargo.toml
datetime/: Cargo.toml
development_tools/: Cargo.toml
encoding/: Cargo.toml
encoding/src/: main.rs
errors/: Cargo.toml
errors/src/: main.rs
file/: Cargo.toml
file/src/: main.rs
foo/: Cargo.toml
foo/src/: foo.cpp  main.rs
foo2/: Cargo.toml
foo2/src/: foo.c  main.rs
hardware/: Cargo.toml
hardware/src/: main.rs
hello/: Cargo.toml  build.rs
hello/src/: hello.c  main.rs
mem/: Cargo.toml
mem/src/: main.rs
net/src/: main.rs
os/: Cargo.toml
os/src/: main.rs
science/: Cargo.toml
science/src/: main.rs
text/: Cargo.toml
web/: Cargo.toml
