[workspace]
members = [ "algorithms", "cli", "compression", "concurrency", "cryptography", "data_structures", "database", "datetime", "development_tools", "encoding", "errors", "file", "foo", "foo2", "hardware", "hello", "mem", "net","os", "science", "text", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [dependencies]
# hyper = { version = "1.3.1", features = ["full"] }
# rand = "0.9.0-alpha.1"
# reqwest = { version = "0.12.4", features = ["blocking", "json", "multipart"] }
# tokio = { version = "1.38.0", features = ["full"] }
