[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
error-chain = "0.12.4"
image = "0.25.1"
lazy_static = "1.5.0"
num = "0.4.3"
num_cpus = "1.16.0"
ring = "0.17.8"
threadpool = "1.8.1"
walkdir = "2.5.0"
