[package]
name = "encoding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
csv = "1.3.0"
data-encoding = "2.6.0"
error-chain = "0.12.4"
percent-encoding = "2.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
url = "2.5.2"
