[package]
name = "science"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
nalgebra = "0.32.6"
ndarray = { version = "0.15.6", features = ["approx"] }
num = "0.4.3"
serde_json = "1.0.117"
