[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
error-chain = "0.12.4"
hyper = { version = "1.3.1", features = ["full"] }
mime = "0.3.17"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
select = "0.6.0"
serde = "1.0.203"
tempdir = "0.3.7"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"
